# claire

./: .gitignore  Cargo.toml  LICENSE  README.md
extension/: background.js  manifest.json  popup.css  popup.html  popup.js
frontend/: app.js  index.html  style.css
src/: categories.rs  downloader.rs  ipc.rs  lib.rs  main.rs  manager.rs  meta.rs  server.rs  store.rs  task.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
